--- a/package.json
+++ b/package.json
@@ -13,21 +13,25 @@
     "@types/react": "18.2.74",
     "@types/react-dom": "18.2.24",
     "autoprefixer": "10.4.19",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.4",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.365.0",
     "next": "14.1.4",
     "postcss": "8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "3.4.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
