--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.4",
+    "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.365.0",
     "next": "14.1.4",
