--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.365.0",
-    "next": "14.1.4",
+    "next": "^13.5.6",
     "postcss": "8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
